Provide detailed error information on failed commands
Fixes #15511

Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>